tests/ui/field_not_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
   --> $DIR/field_not_clone.rs:5:10
    |
5   | #[derive(PureClone)]
    |          ^^^^^^^^^ the trait `Clone` is not implemented for `Foo`
    |
note: required by `clone`
    = note: this error originates in the derive macro `PureClone` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: PureClone` is not satisfied
  --> $DIR/field_not_clone.rs:7:8
   |
7  |     f: Foo,
   |        ^^^ the trait `PureClone` is not implemented for `Foo`
   |
note: required by `pure_clone`
  --> $DIR/clone.rs:38:5
   |
38 |     fn pure_clone(&self) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
